# audio_samples_qoe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: docs.yml
benches/: compare_cpp.sh  io.rs  visqol.rs
examples/: eval_datasets.rs  io_bench.rs  scoreq_cli.rs  visqol_cli.rs
python/: Cargo.toml  README.md  pyproject.toml
python/audio_samples_qoe/: __init__.py  _native.pyi
python/docs/: Makefile  api.md  conf.py  index.md  quickstart.md
python/docs/guide/: errors.md  inputs.md  modes.md
python/docs/source/: conf.py  index.rst
python/docs/source/api/: exceptions.rst  functions.rst  index.rst
python/docs/source/guide/: errors.rst  inputs.rst  installation.rst  modes.rst  quickstart.rst
python/examples/: 01_basic_file_scoring.py  02_numpy_arrays.py  03_speech_mode.py  04_batch_scoring.py  05_noise_sweep.py
python/notebooks/: dataset_eval.ipynb  dataset_eval_executed.ipynb
python/src/: lib.rs
python/tests/: test_visqol.py
src/: error.rs  lib.rs  python.rs  utils.rs
src/scoreq/: mod.rs  model.rs  preprocess.rs  weights.rs
src/visqol/: alignment.rs  mod.rs  nsim.rs  options.rs  patches.rs  spectrogram_ops.rs  svr.rs  vad.rs
tests/: conformance.rs  scoreq.rs
