[project]
name = "audio-samples-qoe-eval"
version = "0.1.0"
description = "Evaluation, benchmarking, and notebook tooling for the audio_samples_qoe perceptual quality metrics."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jack Geraghty", email = "jgeraghty049@gmail.com" }]
license = "MIT"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/jmg049/audio_samples_qoe"
Repository = "https://github.com/jmg049/audio_samples_qoe"
