[package]
name = "audio-samples-qoe-py"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
audio_samples_qoe = { path = ".." }
audio_samples = { version = "1.0.13", default-features = false }
audio_samples_io = { version = "0.3.2", features = ["wav", "flac"] }
ndarray = "0.17"
numpy = "0.28"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }

[profile.release]
lto = true
