[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "audio-samples-qoe"
description = "ViSQOL perceptual audio quality (MOS-LQO) — pure-Rust implementation with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jack Geraghty", email = "jgeraghty049@gmail.com" }]
license = "MIT"
keywords = ["audio", "quality", "visqol", "mos", "speech", "dsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.23",
    "audio_samples>=0.2.3",
    "ipywidgets>=8.1.8",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jmg049/audio_samples_qoe"
Repository = "https://github.com/jmg049/audio_samples_qoe"
Documentation = "https://github.com/jmg049/audio_samples_qoe"

[dependency-groups]
dev = ["pytest>=8"]
docs = [
    "sphinx>=8",
    "furo>=2024.8.6",
    "myst-parser>=4",
    "sphinx-autodoc-typehints>=2",
    "sphinx-copybutton>=0.5",
]

[tool.maturin]
module-name = "audio_samples_qoe._native"
